[tool.poetry]
name = "chess-embedding"
version = "0.1.4"
description = "A library for manipulating, learning and searching on chess positions."
authors = ["Patrick Frank <patr.frank@gmx.de>"]
repository = "https://github.com/patrickfrank1/chess-embedding.git"
license = "GPLv3"
classifiers=[
		'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
		'Operating System :: OS Independent',
		'Programming Language :: Python :: 3',
		'Topic :: Scientific/Engineering :: Artificial Intelligence',
		'Topic :: Software Development :: Pre-processors',
		'Topic :: Games/Entertainment :: Board Games'
]
packages = [
    { include = "chesspos" }
]
exclude = ["chesspos.test"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.10.0"
numpy = "^1.23.4"
chess = "^1.9.3"
h5py = "^3.7.0"
matplotlib = "^3.6.2"
colorama = "^0.4.6"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pyinstrument = "^4.4.0"
ipykernel = "^6.17.1"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
