[project]
name = "chesspos"
version = "0.1.0"
description = "Learn an embedding for chess positions"
authors = ["Patrick Frank <patr.frank@gmx.de>"]
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "chess>=1.11.2",
    "datasets>=4.5.0",
    "keras-nlp>=0.26.0",
    "numpy>=1.24,<2.4",
    "pymilvus>=2.6.9",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "umap-learn>=0.5.11",
]
